# PIPNet

./: .gitignore  load_model.ipynb  load_model.py  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
evaluation/: interpretability_metrics.py  main_evaluate_funny_birds.py  save_evaluate_model.py
evaluation/funny_birds/: evaluation_protocols.py
evaluation/funny_birds/explainers/: explainer_wrapper.py
features/: convnext_features.py  dino_features.py
pipnet/: pipnet.py  train.py
util/: FunnybirdsDataset.py  IsicDataset.py  LungColonDataset.py  RSNAPneumoniaDataset.py  args.py  data.py
