[project]
name = "PIPNet"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "hturbe", email = "hugues.turbe@gmail.com" }]
dependencies = [
    "tqdm>=4.66.2",
    "opencv-python>=4.9.0.80",
    "pandas>=2.2.1",
    "matplotlib>=3.8.3",
    "torch>=2.2.1",
    "torchvision>=0.17.1",
    "scikit-learn>=1.4.1.post1",
    "pyrootutils>=1.0.4",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = ["ipykernel>=6.29.3", "ipywidgets>=8.1.2"]
